# open-pool-benchmark

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pools.yml  pyproject.toml
.github/workflows/: ci.yml
miner/: openbench_miner.py  pyproject.toml
openbench/: __init__.py  __main__.py  adapters.py  cli.py  config.py  context.py  docker.py  regtest.py  report.py  results.py  runner.py
openbench/probes/: Dockerfile  _stratum.py  conn_probe.py  connscale.py  stratum_bench.py  wait_ready.py  zmqlatency.py
openbench/tests/: __init__.py  base.py
openbench/tests/unit/: test_adapters.py  test_config.py  test_docker.py  test_regtest.py  test_report.py  test_results.py  test_runner.py
pools/ckpool/: Dockerfile  bench.conf
pools/erikslund-cpp/: bench.yml
pools/pogolo/: bench.toml
pools/public-pool/: Dockerfile  Dockerfile.dockerignore  bench.env
regtest/: Dockerfile.bitcoind  Dockerfile.miner  bitcoin.conf  docker-compose.yml
